# advent-of-code

./: .editorconfig  Cargo.toml  Makefile  README.md  index.html  justfile  run.bash
.github/workflows/: default.yml  release.yml
src/: dayone.rs  daythree.rs  daytwo.rs  lib.rs  main.rs  title.rs  util.rs  y15d01.rs  y15d02.rs  y15d03.rs  y15d04.rs  y15d05.rs  y15d06.rs  y15d07.rs  y15d08.rs  y15d09.rs  y15d10.rs  y15d11.rs  y15d12.rs  y15d13.rs  y15d14.rs  y15d15.rs  y15d16.rs  y15d17.rs  y15d18.rs  y15d19.rs  y22d01.rs  y22d02.rs  y22d03.rs  y22d04.rs  y22d05.rs  y22d06.rs  y22d07.rs  y22d08.rs  y22d09.rs  y22d10.rs  y22d11.rs  y22d12.rs  y22d13.rs  y22d14.rs  (+31 more)
