[package]
name = "aoc"
version = "2023.0.0"
authors = ["Mario Finelli"]
description = "My advent of code solutions"
documentation = "https://mfinelli.github.io/advent-of-code"
readme = "README.md"
repository = "https://github.com/mfinelli/advent-of-code"
license = "Apache-2.0"
publish = false

# https://doc.rust-lang.org/edition-guide/index.html
edition = "2021"

[dependencies]
itertools = "0.12.0"
md-5 = "0.10.6"
peak_alloc = "0.2.0"
rand = "0.8.5"
regex = "1.10.3"
serde_json = "1.0.108"
termcolor = "1.4.1"
